telas do eric - sem actionPerformed
ainda nao gerei as opções dinamicamente de acordo com banco de dados

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=/home/thiago/.netbeans/8.2/build.properties
+user.properties.file=D:\\Usu\u00e1rios\\Eric\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
