--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=D:\\Usu\u00e1rios\\Eric\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=/home/hugo/.netbeans/8.1/build.properties
